INTYG-7842: Fixat till marginalen längst ner, padding fungerar inte med overflow: scroll i ie11

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcBottomFadeout/wcBottomFadeout.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcBottomFadeout/wcBottomFadeout.directive.scss
@@ -49,6 +49,12 @@ wc-bottom-fadeout {
       overflow-y: visible;
       max-height: none;
     }
+
+    &:after {
+      content: '';
+      display: block;
+      padding-bottom: $wc-text-fadeout-height;
+    }
   }
 }
 
